[package]
name = "pico-rust-template"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = "*"
cortex-m-rt = "*"
cortex-m = "*"
panic-halt = "*"
rp2040-boot2 = "*"
embedded-hal = "*"
embedded-time = "*"
rp-pico="*"
nb="*"
embedded-graphics="*"
ssd1306="*"
st7789="*"
micromath="*"
tinybmp="*"
usb-device= {version="*",features = ["control-buffer-256"] }
usbd-serial = "*"
usbd-hid = "*"
display-interface = "*"
display-interface-spi = "*"
heapless="*"
#serde={version="*",default-features=false,features=["derive"]}
#serde-json-core="*"
bincode ={version= "2.0.0-rc.1",default-features=false, features=["serde_incl","serde_no_std","derive"]}
defmt = "*"
defmt-rtt = "*"